--- a/src/Components/Admin/Navbar.css
+++ b/src/Components/Admin/Navbar.css
@@ -17,14 +17,14 @@ li {
 
 .main-nav {
   display: grid;
-  position: fixed;
   overflow: hidden;
+  margin:0;
   top:0;
   left: 0;
   right: 0;
   bottom: 0;
   width: 100%;
-  height: 5rem;
+  height: 3rem;
   grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
   box-shadow: rgba(108, 108, 126, 0.25) 0px 0px 20px 0px;
 }
@@ -50,7 +50,7 @@ li {
 
 
 .logo h2 {
-  font-size:2rem;
+  font-size:1rem;
   vertical-align: middle;
   font-weight: 400;
   text-transform: uppercase;
@@ -61,7 +61,7 @@ li {
 
 
 .menu-link ul li {
-    font-size: 1.3rem;
+    font-size: 1rem;
     width: 10rem;
     height: 100%;
 }
