--- a/src/Components/Admin/table.css
+++ b/src/Components/Admin/table.css
@@ -1,7 +1,6 @@
 .tableDiv{
     border: 1px rgb(223, 223, 223) solid;
     border-radius: 7px;
-    margin:10px;
     padding:10px;
 }
 table{
@@ -13,4 +12,19 @@ tr{
 }
 th,td{
     padding:15px!important;
+}
+.editButton{
+    color:white;
+    padding:5px 15px 5px 15px;
+    border-radius: 5px;
+    border: 0;
+}
+.editButton:hover{
+    color: white;
+}
+.deleteButton{
+    color:white;
+    padding:5px 15px 5px 15px;
+    border-radius: 5px;
+    border: 0;
 }
