--- a/src/Components/Admin/Navbar.css
+++ b/src/Components/Admin/Navbar.css
@@ -16,7 +16,7 @@ li {
 }
 
 .main-nav {
-  display: grid;
+  display: flex;
   overflow: hidden;
   margin:0;
   top:0;
@@ -25,7 +25,6 @@ li {
   bottom: 0;
   width: 100%;
   height: 3rem;
-  grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
   box-shadow: rgba(108, 108, 126, 0.25) 0px 0px 20px 0px;
 }
 
@@ -38,7 +37,6 @@ li {
 }
 
 .menu-link {
-  grid-column: 3/4;
 }
 
 .menu-link ul {
@@ -62,7 +60,7 @@ li {
 
 .menu-link ul li {
     font-size: 1rem;
-    width: 10rem;
+    width: 9.5rem;
     height: 100%;
 }
 .menu-link ul li a {
@@ -84,7 +82,6 @@ li {
 }
 
 .logout {
-    grid-column: 4/5;
   height: 100%;
   display: flex;
   align-items: center;
