--- a/src/Components/Admin/Navbar.css
+++ b/src/Components/Admin/Navbar.css
@@ -25,7 +25,7 @@ li {
   bottom: 0;
   width: 100%;
   height: 3rem;
-  box-shadow: rgba(108, 108, 126, 0.25) 0px 0px 20px 0px;
+  border-left: 1px solid rgb(230, 230, 230);
 }
 
 .logo {
@@ -44,6 +44,7 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-left: 0;
 }
 
 
@@ -73,12 +74,14 @@ li {
 }
 
 .menu-link ul li:hover{
-    background-color: #ededed;
-    transition: 0.5s;
-  cursor: pointer;
+    cursor: pointer;
+    border-top: 3px solid #ffc107;
+
+    
 }
 .menu-link ul li.active{
-    background-color: #ededed;
+    border-top: 3px solid #ffc107;
+
 }
 
 .logout {
