--- a/src/Components/Admin/Sidebar.css
+++ b/src/Components/Admin/Sidebar.css
@@ -1,6 +1,7 @@
 
   .nav-menu {
     background-color: #ffc107;
+    width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
