--- a/src/Components/Admin/Sidebar.css
+++ b/src/Components/Admin/Sidebar.css
@@ -56,3 +56,16 @@
   span {
     margin-left: 16px;
   }
+
+  .sidebar-footer{
+    position: fixed;
+    color: white ;
+    bottom: 10px;
+    font-size: larger;
+  }
+
+  .sidebar-footer img {
+    width: 2.7rem;
+    border-radius: 50%;
+  }
+  
