--- a/src/Components/Admin/Manage/fashionConsultant.css
+++ b/src/Components/Admin/Manage/fashionConsultant.css
@@ -21,13 +21,13 @@
 
 
 
-  .card.user-card {
+#fashionConsultantDetails .card.user-card {
     border-top: none;
     -webkit-transition: all 150ms linear;
     transition: all 150ms linear;
 }
 
-.card {
+#fashionConsultantDetails .card {
     border-radius: 5px;
     border: none;
     margin-bottom: 30px;
@@ -35,13 +35,13 @@
     transition: all 0.3s ease-in-out;
 }
 
-.card .card-header {
+#fashionConsultantDetails .card .card-header {
     background-color: transparent;
     border-bottom: none;
     padding: 25px;
 }
 
-.card .card-header h5 {
+#fashionConsultantDetails .card .card-header h5 {
     margin-bottom: 0;
     color: #222;
     font-size: 14px;
@@ -51,19 +51,19 @@
     line-height: 1.4;
 }
 
-.card .card-header+.card-block, .card .card-header+.card-block-big {
+#fashionConsultantDetails .card .card-header+.card-block, #fashionConsultantDetails  .card .card-header+.card-block-big {
     padding-top: 0;
 }
 
-.user-card .card-block {
+#fashionConsultantDetails .user-card .card-block {
     text-align: center;
 }
 
-.card .card-block {
+#fashionConsultantDetails .card .card-block {
     padding: 25px;
 }
 
-.user-card .card-block .user-image {
+#fashionConsultantDetails .user-card .card-block .user-image {
     position: relative;
     margin: 0 auto;
     display: inline-block;
@@ -72,7 +72,7 @@
     height: 110px;
 }
 
-.user-card .card-block .user-image img {
+#fashionConsultantDetails .user-card .card-block .user-image img {
     z-index: 20;
     position: absolute;
     top: 5px;
@@ -81,39 +81,39 @@
     height: 100px;
 }
 
-.img-radius {
+#fashionConsultantDetails .img-radius {
     border-radius: 50%;
 }
 
-.f-w-600 {
+#fashionConsultantDetails .f-w-600 {
     font-weight: 600;
 }
 
-.m-b-10 {
+#fashionConsultantDetails .m-b-10 {
     margin-bottom: 10px;
 }
 
-.m-t-25 {
+#fashionConsultantDetails .m-t-25 {
     margin-top: 25px;
 }
 
-.m-t-15 {
+#fashionConsultantDetails .m-t-15 {
     margin-top: 15px;
 }
 
-.card .card-block p {
+#fashionConsultantDetails .card .card-block p {
     line-height: 1.4;
 }
 
-.text-muted {
+#fashionConsultantDetails .text-muted {
     color: #919aa3!important;
 }
 
-.user-card .card-block .activity-leval li.active {
+#fashionConsultantDetails .user-card .card-block .activity-leval li.active {
     background-color: #2ed8b6;
 }
 
-.user-card .card-block .activity-leval li {
+#fashionConsultantDetails .user-card .card-block .activity-leval li {
     display: inline-block;
     width: 15%;
     height: 4px;
@@ -121,57 +121,57 @@
     background-color: #ccc;
 }
 
-.user-card .card-block .counter-block {
+#fashionConsultantDetails .user-card .card-block .counter-block {
     color: #fff;
 }
 
-.bg-c-blue {
+#fashionConsultantDetails .bg-c-blue {
     background: linear-gradient(45deg,#4099ff,#73b4ff);
 }
 
-.bg-c-green {
+#fashionConsultantDetails .bg-c-green {
     background: linear-gradient(45deg,#2ed8b6,#59e0c5);
 }
 
-.bg-c-yellow {
+#fashionConsultantDetails .bg-c-yellow {
     background: linear-gradient(45deg,#FFB64D,#ffcb80);
 }
 
-.bg-c-pink {
+#fashionConsultantDetails .bg-c-pink {
     background: linear-gradient(45deg,#FF5370,#ff869a);
 }
 
-.m-t-10 {
+#fashionConsultantDetails .m-t-10 {
     margin-top: 10px;
 }
 
-.p-20 {
+#fashionConsultantDetails .p-20 {
     padding: 20px;
 }
 
-.user-card .card-block .user-social-link i {
+#fashionConsultantDetails .user-card .card-block .user-social-link i {
     font-size: 30px;
 }
 
-.text-facebook {
+#fashionConsultantDetails .text-facebook {
     color: #3B5997;
 }
 
-.text-twitter {
+#fashionConsultantDetails .text-twitter {
     color: #42C0FB;
 }
 
-.text-dribbble {
+#fashionConsultantDetails .text-dribbble {
     color: #EC4A89;
 }
 
-.user-card .card-block .user-image:before {
+#fashionConsultantDetails .user-card .card-block .user-image:before {
     bottom: 0;
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
 }
 
-.user-card .card-block .user-image:after, .user-card .card-block .user-image:before {
+#fashionConsultantDetails .user-card .card-block .user-image:after,#fashionConsultantDetails  .user-card .card-block .user-image:before {
     content: "";
     width: 100%;
     height: 49%;
@@ -181,7 +181,7 @@
     z-index: 10;
 }
 
-.user-card .card-block .user-image:after {
+#fashionConsultantDetails .user-card .card-block .user-image:after {
     top: 0;
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
