--- a/src/Components/Admin/Orders.css
+++ b/src/Components/Admin/Orders.css
@@ -1,10 +1,74 @@
+.OrderDetail .card-block{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 1rem;
+}
+.section1{
+    width: 100%;
+}
+.section2,.section3,.section4{
+    width: 100%;
+    margin-top: 1.5rem;
+}
 .section1 > div{
     display: flex;
     justify-content: flex-start;
+}
+.section1 > div > span{
+    color: #C51414;
+    background: rgba(197, 20, 20, 0.25);
+    font-size: 0.7rem;
+    padding: 0.7rem;
+    font-weight: 500;
 }
 .section1 .when{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    font-size: 0.8rem;
+}
+.section1 .when .text{
+    font-size: 0.7rem;
+}
+.section1 .when .date{
+    color: #2C1CE7;
+    font-size: 1rem;
+}
+.section2 > .head , .section3 > .head, .section4 > .head{
+    margin-top: 0.8rem;
+    margin-bottom: 0.8rem;
+    font-weight: 500;
+    font-size: 1.2rem;
+}
+.section2 .details{
+    display: flex;
+    flex-wrap: wrap;
+}
+.section2 .details > div{
+    width: 33.33%;
+    height: 8rem;
+}
+.section2 .details > div .head {
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.section3 .item{
+
+}
+
+.section4 .statuscontent{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+.section4 .statuscontext .statustitle{
+    font-weight: 600;
+}
+.section4 .bullet{
+    margin-right: 0.7rem;
+}
+.modalitem > input {
+    margin: 0.5rem;
 }
