--- a/src/Components/Admin/Portal/Register.css
+++ b/src/Components/Admin/Portal/Register.css
@@ -34,7 +34,7 @@
 	margin: 15px 0;
 	color: #333;
 	text-transform: uppercase;
-	font-size: 2.9rem;
+	font-size: 2rem;
 }
 
 .registercontainer .register-content .input-div{
@@ -146,7 +146,7 @@
 	border-radius: 25px;
 	outline: none;
 	border: none;
-	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
+	background-image: linear-gradient(to right, #ffc107, #ffc107, #ffc107);
 	background-size: 200%;
 	font-size: 1.2rem;
 	color: #fff;
