--- a/src/Components/Authentication/Login.css
+++ b/src/Components/Authentication/Login.css
@@ -156,7 +156,7 @@
 	border-radius: 25px;
 	outline: none;
 	border: none;
-	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
+	background-image: linear-gradient(to right, #ffc107, #ffc107, #ffc107);
 	background-size: 200%;
 	font-size: 1.2rem;
 	color: #fff;
