--- a/src/Components/Admin/Manage/fabricShop.css
+++ b/src/Components/Admin/Manage/fabricShop.css
@@ -202,3 +202,80 @@
     font-size: 15px;
     font-weight: 500;
   }
+
+  
+/* .fabric-samples-grid { 
+    display: grid;
+    grid-template-columns: repeat(auto-fill,  minmax(80px, 1fr));
+    grid-gap: 20px;
+    align-items: stretch;
+    }
+
+.fabric-samples-grid img {
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    max-width: 100%;
+  }
+
+   */
+  
+  .fabric-samples-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-row-gap: 0.5rem;
+    grid-column-gap: 0.5rem;
+    margin: 1rem auto;
+  }
+  
+  .fabric-samples-grid a {
+    color: white;
+  }
+  
+  .fabric-samples-grid a img {
+    margin-bottom: 0;
+    width: 110px;
+    height: 110px;
+  }
+
+  .fabric-samples-grid .img-container{
+    height: 110px;
+    width: 110px;
+    border: 1px solid gray;
+  }
+  
+  .fabric-samples-grid a .btn {
+    position: relative;
+    top:-68%;
+    transform: translate(220%,-100%);
+    -ms-transform: translate(220%, -100%);
+    background-color: #ffffff00;
+    color: #dc3545;
+    border: 2px solid #dc3545;
+    font-weight: 600;
+    font-size: 8px;
+    padding: 0px;
+    height: 18px;
+    width: 18px;
+    cursor: pointer;
+    border-radius: 20%;
+  }
+  
+  @media (max-width: 1400px) {
+    .fabric-samples-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .fabric-samples-grid a {
+    }
+  }
+  
+  @media (max-width: 1000px) {
+    .fabric-samples-grid {
+        grid-template-columns: repeat(2, 1fr);
+
+    }
+    .fabric-samples-grid a {
+    }
+  }
+  
+  
+  
