--- a/src/Components/Admin/Portal/Register.css
+++ b/src/Components/Admin/Portal/Register.css
@@ -2,6 +2,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: white;
+  margin:50px;
+  border-radius: 8px;
+  zoom: 85%;
 }
 
 .registercontainer .img{
@@ -40,7 +44,7 @@
 	position: relative;
     display: grid;
     grid-template-columns: 7% 93%;
-    margin: 25px 0;
+    margin: 40px 0;
     padding: 5px 0;
     border-bottom: 2px solid #d9d9d9;
 }
@@ -81,7 +85,7 @@
 	bottom: -2px;
 	width: 0%;
 	height: 2px;
-	background-color: #38d39f;
+	background-color: #ffc107;
 	transition: .4s;
 }
 
@@ -103,7 +107,7 @@
 }
 
 .registercontainer .input-div.focus > .i > i{
-	color: #38d39f;
+	color: #ffc107;
 }
 
 .registercontainer .input-div > div > input{
@@ -135,7 +139,7 @@
 }
 
 .registercontainer a:hover{
-	color: #38d39f;
+	color: #ffc107;
 }
 
 .registercontainer .btn{
