--- a/src/Components/Authentication/Login.css
+++ b/src/Components/Authentication/Login.css
@@ -92,7 +92,7 @@
 	bottom: -2px;
 	width: 0%;
 	height: 2px;
-	background-color: #38d39f;
+	background-color: #ffc107;
 	transition: .4s;
 }
 
@@ -114,7 +114,7 @@
 }
 
 .logincontainer .input-div.focus > .i > i{
-	color: #38d39f;
+	color: #ffc107;
 }
 
 .logincontainer .input-div > div > input{
@@ -146,7 +146,7 @@
 }
 
 .logincontainer a:hover{
-	color: #38d39f;
+	color: #ffc107;
 }
 
 .logincontainer .btn{
