--- a/src/Components/Admin/Manage/table.css
+++ b/src/Components/Admin/Manage/table.css
@@ -14,13 +14,12 @@ th,td{
     padding:15px!important;
 }
 .editButton{
-    color:white;
     padding:5px 15px 5px 15px;
     border-radius: 5px;
     border: 0;
 }
 .deleteButton{
-    color:white;
+    color: black;
     padding:5px 15px 5px 15px;
     border-radius: 5px;
     border: 0;
